fix: keep model URL encoding compatible with JDK 8