@@ -95,7 +95,7 @@ public class HermesHttpClient implements AutoCloseable {
     public ModelsResponse listModels() { return get(PATH_MODELS, ModelsResponse.class); }
 
     public ModelsResponse.ModelData getModel(String modelId) {
-        return get(PATH_MODELS + "/" + java.net.URLEncoder.encode(modelId, java.nio.charset.StandardCharsets.UTF_8),
+        return get(PATH_MODELS + "/" + java.net.URLEncoder.encode(modelId, "UTF-8"),
                 ModelsResponse.ModelData.class);
     }
 
